[DEMO-53] Clean up build, caching, and messages configuration