@@ -45,37 +45,14 @@
 		</artifact:mvn>
 	</target>
 
-	<!-- start the integrated gwt development server in debug mode inplace with the current codebase - add yourkit profiling -->
-	<target name="gwt-debug-yourkit">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true">
-            <arg value="-o"/>
-            <arg value="-Pgwt"/>
-			<arg value="gwt:debug"/>
-			<arg value="-Dgwt.extraJvmArgs=-XX:MaxPermSize=256M -Xmx512M -Dlogs.dir=${logs.dir} -agentpath:${yourkit.agent.path}libyjpagent.jnilib=builtinprobes=none,delay=10000,sessionname=Jetty"/>
-		</artifact:mvn>
-	</target>
-
     <!-- Requires full maven install. -->
 	<target name="jetty-demo">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true">
-			<jvmarg value="-XX:MaxPermSize=256M" />
-		    <jvmarg value="-Xmx512M" />
-			<arg value="compile"/>
-			<arg value="war:exploded"/>
-			<arg value="jetty:run"/>
-		</artifact:mvn>
-	</target>
-
-
-	<target name="jetty-debug">
 		<delete dir="war/WEB-INF/lib"/>
 		<artifact:mvn mavenHome="${maven.home}" fork="true" >
 			<jvmarg value="-XX:MaxPermSize=256M" />
 			<jvmarg value="-Xmx512M" />
 			<jvmarg value="-Xdebug" />
-			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8001" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8001" />
 			<arg value="compile"/>
 			<arg value="war:exploded"/>
 			<arg value="jetty:run"/>
@@ -99,24 +76,6 @@
 		</artifact:mvn>
 	</target>
 
-	<target name="jetty-demo-yourkit">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true" jvmargs="-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -XX:MaxPermSize=256M -Xmx512M -agentpath:${yourkit.agent.path}libyjpagent.jnilib=builtinprobes=none,delay=10000,sessionname=Jetty">
-			<arg value="compile"/>
-			<arg value="war:exploded"/>
-			<arg value="jetty:run"/>
-		</artifact:mvn>
-	</target>
-
-    <target name="jetty-demo-jrebel-yourkit">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true" jvmargs="-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -XX:MaxPermSize=256M -Xmx512M -Drebel.root=${project.root} -Dlogs.dir=${logs.dir} -noverify -javaagent:${jrebel.path} -agentpath:${yourkit.agent.path}libyjpagent.jnilib=builtinprobes=none,delay=10000,sessionname=Jetty">
-			<arg value="compile"/>
-			<arg value="war:exploded"/>
-			<arg value="jetty:run"/>
-		</artifact:mvn>
-	</target>
-	
 	<target name="jetty-stop">
 		<artifact:mvn mavenHome="${maven.home}" fork="true" >
 			<jvmarg value="-XX:MaxPermSize=256M" />
