@@ -16,17 +16,6 @@
 		<artifact:mvn mavenHome="${maven.home}" fork="true">
 			<jvmarg value="-XX:MaxPermSize=256M" />
 			<jvmarg value="-Xmx512M" />
-			<arg value="compile"/>
-			<arg value="war:exploded"/>
-			<arg value="jetty:run"/>
-		</artifact:mvn>
-	</target>
-
-	<target name="jetty-debug" depends="start-db">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true">
-			<jvmarg value="-XX:MaxPermSize=256M" />
-			<jvmarg value="-Xmx512M" />
 			<jvmarg value="-Xdebug" />
 			<jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
 			<arg value="compile"/>
@@ -46,38 +35,6 @@
 			<jvmarg value="-Dlogs.dir=${logs.dir}" />
 			<jvmarg value="-noverify" />
 			<jvmarg value="-javaagent:${jrebel.path}" />
-			<arg value="compile"/>
-			<arg value="war:exploded"/>
-			<arg value="jetty:run"/>
-		</artifact:mvn>
-	</target>
-
-	<target name="jetty-demo-yourkit">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true">
-			<jvmarg value="-XX:MaxPermSize=256M" />
-			<jvmarg value="-Xmx512M" />
-			<jvmarg value="-Xdebug" />
-			<jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-			<jvmarg value="-agentpath:${yourkit.agent.path}libyjpagent.jnilib=builtinprobes=none,delay=10000,sessionname=Jetty" />
-			<arg value="compile"/>
-			<arg value="war:exploded"/>
-			<arg value="jetty:run"/>
-		</artifact:mvn>
-	</target>
-
-    <target name="jetty-demo-jrebel-yourkit">
-		<delete dir="war/WEB-INF/lib"/>
-		<artifact:mvn mavenHome="${maven.home}" fork="true" jvmargs="">
-			<jvmarg value="-XX:MaxPermSize=256M" />
-			<jvmarg value="-Xmx512M" />
-			<jvmarg value="-Xdebug" />
-			<jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-			<jvmarg value="-Drebel.root=${project.root}" />
-			<jvmarg value="-Dlogs.dir=${logs.dir}" />
-			<jvmarg value="-noverify" />
-			<jvmarg value="-javaagent:${jrebel.path}" />
-			<jvmarg value="-agentpath:${yourkit.agent.path}libyjpagent.jnilib=builtinprobes=none,delay=10000,sessionname=Jetty" />
 			<arg value="compile"/>
 			<arg value="war:exploded"/>
 			<arg value="jetty:run"/>
